Fixed avatar z-index bug

--- a/client/mainView/detailed/detailed.css
+++ b/client/mainView/detailed/detailed.css
@@ -47,6 +47,10 @@
     margin-right: 8px;
 }
 
+.avatar .avatar-initials {
+    z-index: auto;
+}
+
 .main-detailed-post-username {
     margin-right: 8px;
 }
